--- a/library.properties
+++ b/library.properties
@@ -4,5 +4,6 @@ author=Keith Rieck
 maintainer=KeithRieck <KeithRieck@gmail.com>
 sentence=Library for animations on Adafruit NeoPixels.
 paragraph=Extends Adafruit's NeoPixel library allowing an Arduino to execute multiple simultanous animations.
+category=Display
 url=https://github.com/firebears-frc/PixelStrip
 architectures=*
