--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=PixelStrip
-version=1.1.0
+version=2.0.0
 author=Keith Rieck
 maintainer=KeithRieck <KeithRieck@gmail.com>
-sentence=Library for animations on Adafruit NeoPixels.
-paragraph=Extends Adafruit's NeoPixel library allowing an Arduino to execute multiple simultanous animations.
+sentence=Library for animations on RGB pixel strips.
+paragraph=Uses the FastLED library, allowing an Arduino to execute multiple simultanous animations.
 category=Display
 url=https://github.com/firebears-frc/PixelStrip
 architectures=*
