--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=PixelStrip
-version=1.1.1
+version=1.2.0
 author=Keith Rieck
 maintainer=KeithRieck <KeithRieck@gmail.com>
 sentence=Library for animations on Adafruit NeoPixels.
-paragraph=Extends Adafruit's NeoPixel library allowing an Arduino to execute multiple simultanous animations.
+paragraph=Extends the Adafruit NeoPixel library allowing an Arduino to execute multiple simultanous animations.
 category=Display
 url=https://github.com/firebears-frc/PixelStrip
 architectures=*
+depends=Adafruit NeoPixel
