Added pixel matrix functions

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=PixelStrip
-version=2.0.4
+version=3.0.0
 author=Keith Rieck
 maintainer=KeithRieck <KeithRieck@gmail.com>
-sentence=Library for animations on RGB pixel strips.
+sentence=Library for animations on RGB pixel strips and matrices.
 paragraph=Uses the FastLED library, allowing an Arduino to execute multiple simultanous animations.
 category=Display
 url=https://github.com/firebears-frc/PixelStrip
